<resources>
    <string name="app_name">StudentAide</string>
    <string name="action_add">Add Subject</string>
    <string name="action_settings">Settings</string>
    <string name="add_screen_1">Subject Code:</string>
    <string name="add_screen_2">Subject Name          :</string>
    <string name="add_screen_3">Min Attendance Reqired:</string>
    <string name="add_screen_4">Days</string>
    <string name="add_screen_5">ADD SUBJECT</string>
    <string name="add_screen_6">EDIT SUBJECT</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="title_activity_fragact">fragact</string>
    <string name="title_activity_add_screen">add_screen</string>
    <string name="title_activity_actual">ActualActivity</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
