<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.android.lakshmanaram.studentaide.add_screen"
    android:orientation="vertical"
    android:background="#fa0"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/add_screen_1"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="textCapCharacters"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sub_code_et"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/add_screen_2"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="textCapCharacters"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sub_name_et"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/add_screen_3"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_weight="2"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sub_min_et"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/add_screen_4"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mon_cb"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:text="@string/mon"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_weight="1"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mon_et"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tue_cb"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:text="@string/tue"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_weight="1"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tue_et"
            />
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wed_cb"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_weight="3"
        android:text="@string/wed"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_weight="1"
        android:inputType="number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/wed_et"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thu_cb"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:text="@string/thu"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_weight="1"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/thu_et"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fri_cb"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:text="@string/fri"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_weight="1"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/fri_et"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sat_cb"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:text="@string/sat"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_weight="1"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sat_et"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sun_cb"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:text="@string/sun"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_weight="1"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sun_et"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:layout_weight="1"
        android:layout_width="wrap_content"
            android:text="@string/add_screen_5"
            android:background="#0a0"
            android:id="@+id/ebutton"
            android:textColor="#fff"
            android:textAlignment="center"
        android:layout_height="wrap_content" />
        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
